update gitignore & add a new thread to sovle the caton
添加了一个std::thread, 但是只要加上thread的代码就会crashed...不过只build的话, 把exe和dll全部放在一起, 就没有问题可以运行, 好像是环境有问题.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,19 @@
 /debug
 /release/ColdMusic.tlog
 /release
+
+
+#语法检查py脚本
+t.py
+
+#autosave
+*.autosave
+
+
+#vistual studio files
+*.vcxproj
+*.filters
+*.user
+.vs/
+v15/*
+
